[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fpdf>=1.7.2",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "solana>=0.36.9",
    "solders>=0.26.0",
    "streamlit>=1.48.1",
    "streamlit-authenticator>=0.4.2",
    "streamlit-js-eval>=0.1.7",
    "web3>=7.13.0",
]
